Review minor cleanups (#6)
* Fix typing to make mypy happy

* dataclass preferred over NamedTuple

* Rename negexpm to expnegm

* Add missing dev dependencies

* Add pre-commit config using ruff and fix code style

* Revert init, NamedTuple and add exceptions to ruff checks

---------

Co-authored-by: Gavin Crooks <gec@Gaussian.local>
Co-authored-by: KaelanDt <kaelandonatella@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,5 +17,18 @@ classifiers = [
 ]
 dependencies = ["jax>=0.4.0", "jaxlib>=0.4.0"]
 
+[project.optional-dependencies]
+dev = [
+  'pytest-cov',
+  'pytest',
+  'optax',
+  'mypy',
+  'pre-commit',
+]
+
 [tool.setuptools]
 packages = ["thermox"]
+
+[tool.ruff]
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401", "F821"]
