--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -34,6 +34,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .[test]
+          pip install .[dev]
       - name: Run the tests with pytest
         run: |
           python -m pytest --cov=thermox --cov-report term-missing
