add workflow for pre-commit and test (#11)
* add workflow for pre-commit and test

* split dependencies into test and dev

* install dev depencies in the workflow

* simplify pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,14 +18,7 @@ classifiers = [
 dependencies = ["jax>=0.4.0", "jaxlib>=0.4.0"]
 
 [project.optional-dependencies]
-dev = [
-  'pytest-cov',
-  'pytest',
-  'optax',
-  'mypy',
-  'pre-commit',
-  'ruff',
-]
+test = ["pre-commit", "pytest-cov", "ruff", "optax", "mypy"]
 
 [tool.setuptools]
 packages = ["thermox"]
