--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "thermox"
 version = "0.0.1"
-description = "OU Processes and Linear Algebra with JAX"
+description = "Exact OU processes with JAX"
 readme = "README.md"
 requires-python =">=3.9"
 license = {text = "Apache-2.0"}
