--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "thermox"
-version = "0.0.4"
+version = "0.0.5"
 description = "Exact OU processes with JAX"
 readme = "README.md"
 requires-python =">=3.9"
@@ -15,7 +15,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Mathematics",
     "License :: OSI Approved :: Apache Software License",
 ]
-dependencies = ["jax>=0.4.0", "jaxlib>=0.4.0", "fmmax>=1.0.0", "packaging"]
+dependencies = ["jax>=0.4.0", "jaxlib>=0.4.0", "fmmax>=1.1.1"]
 
 [project.optional-dependencies]
 test = ["pre-commit", "pytest-cov", "ruff", "optax", "mypy"]
